tests/type_return_path.mira
fn no_return(): int {
    print(1);
}

fn main(): void {
    print(no_return());
}
